# Isschat

./: .dockerignore  .dvcignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  2_pipeline_traitement_messages.mmd  5_gestion_session_contexte.mmd  6_interaction_typique.mmd  ARCHITECTURE_SUMMARY.md  Dockerfile  EVALUATION_SYSTEM_PLAN.md  FICHE_PROJET_ISSCHAT_MAJ.md  LICENSE  README.md  README_chunking_tester.md  REFACTORING_PLAN.md  chunking_test.py  cleanup_slow_queries.py  config.py  connector.py  data_flow.mmd  diagram.mmd  evaluation_dashboard.py  flux_donnees.mmd  generate_latest_report.py  generate_report_simple.py  main.py  modop_acr.md  pyproject.toml  quick_test.py  rag_evaluation_design.md  rapport_evaluation_20250620_104733.html  rapport_evaluation_20250625_161856.html  rapport_evaluation_complet_20250620_104733.html  requirements.txt  run_dashboard.py  run_tests.py  test_confluence.py  test_context_aware_rag.py  (+5 more)
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
Evaluation/: eval_answer_relevance.py  question_dataset.json  run_evaluation.py
config/: __init__.py  evaluation_config.py
config/test_datasets/: robustness_tests.json
docker_debug/tmpufkqlf44/: _remote_module_non_scriptable.py
docs/: context_aware_rag.md  weaviate-grpc-timeout-fix.md
evaluation_results/: evaluation_results_20250611_144154.json  evaluation_results_20250611_151118.json  evaluation_results_20250611_151435.json  evaluation_results_20250611_151855.json  evaluation_results_20250611_154539.json  evaluation_results_20250611_155900.json  evaluation_results_20250611_160929.json  evaluation_results_20250611_162334.json  evaluation_results_20250611_162604.json  evaluation_results_20250611_163529.json  evaluation_results_20250612_103849.json  evaluation_results_20250612_105609.json  evaluation_results_20250612_115947.json  evaluation_results_20250616_160223.json  evaluation_results_20250618_144420.json  evaluation_results_20250618_145027.json  evaluation_results_20250618_145411.json  evaluation_results_20250618_150202.json  evaluation_results_20250618_150537.json  evaluation_results_20250618_150809.json
examples/: sharepoint_ingestion_example.py
logs/conversations/: conv_log_20250505.jsonl  conv_log_20250512.jsonl  conv_log_20250513.jsonl  conv_log_20250515.jsonl
logs/performance/: perf_log_20250505.jsonl  perf_log_20250512.jsonl  perf_log_20250513.jsonl  perf_log_20250515.jsonl
rag_evaluation/: PERFORMANCE_COMPARISON.md  README.md  __init__.py  cli.py  config_evaluation.py  evaluation_dashboard.py  evaluator.py  factory.py  main.py  models.py  report_generator.py  run_dashboard.py  run_evaluation.py  run_performance_comparison.py
rag_evaluation/config/: __init__.py  evaluation_config.py  evaluators.json  test_datasets.dvc
rag_evaluation/core/: __init__.py  base_evaluator.py  isschat_client.py  llm_judge.py
rag_evaluation/evaluation_results/: evaluation_results_20250616_153907.json
rag_evaluation/evaluators/: __init__.py  business_value_evaluator.py  conversational_evaluator.py  document_relevance_evaluator.py  feedback_evaluator.py  generation_evaluator.py  performance_comparison_evaluator.py  performance_evaluator.py  retrieval_evaluator.py  robustness_evaluator.py
rag_evaluation/test_datasets/: bva_tests.json
schemas/: 1_architecture_globale.mmd  1a_architecture_webapp.mmd  1b_architecture_cli.mmd  1c_architecture_evaluation.mmd  data_model.mmd  external_integration.mmd  request_flow.mmd  request_flow_sequential.mmd
scripts/: test_semantic_retrieval.py
src/: auth.py  conf_token_verification.py  config_import.py  conversation_analysis.py  dashboard.py  diagnostic.py  evaluate.py  features_integration.py  feedback_system.py  help_desk.py  isschat_app.py  isschat_webapp.py  load_db.py  main.py  performance_tracking.py  query_history.py  query_reformulation.py  question_suggestion.py  read_vector_files.py  response_tracking.py  simple_feedback.py  streamlit.py  streamlit_torch_patch.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  keyvault.py  llamaindex_config.py  paths.py  secrets.py  settings.py
src/core/: __init__.py  config.py  data_manager.py  documents.py  embeddings_manager.py  exceptions.py  interfaces.py
src/data_pipeline/: __init__.py  integrated_data_ingestion_pipeline.py  offline_db_manager.py  pipeline_manager.py
src/embeddings/: __init__.py  models.py  service.py
src/evaluation/: __init__.py  dataset_manager.py  evaluator.py  generation_evaluator.py  llm_judge.py  manager.py  models.py  results_manager.py
src/generation/: __init__.py  base_generator.py  openrouter_generator.py  prompt_templates.py
src/ingestion/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_basic.py  test_chunker.py  test_connectors.py  test_data.py  test_data_loader.py  test_dockerfile_files.py  test_embeddings_manager.py  test_embeddings_service.py  test_faiss_store.py  test_help_desk.py  test_keyvault.py  test_openrouter_generator.py  test_prompt_assistant.py  test_query_processor.py  test_rag_evaluation.py  test_response_formatter.py  test_semantic_understanding.py  test_storage.py  test_vectordb.py
(+100 files in other folders)
