[project]
name = "isschat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Nicolas Lambropoulos", email = "nicolas.lambropoulos@isskar.fr"}
]
dependencies = [
    "langchain-community>=0.2.0",
    "langchain>=0.2.0",
    "streamlit>=1.31.0",
    "langchain-core>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "faiss-cpu>=1.7.4",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.19.0",
    "sentence-transformers>=2.2.2",
    "openai>=1.0.0",
    "atlassian-python-api>=3.41.0",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tqdm>=4.65.0",
    "watchdog>=3.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "html2text>=2025.4.15",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
