[project]
name = "isschat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Nicolas Lambropoulos", email = "nicolas.lambropoulos@isskar.fr"},
    {name = "Emin Calyaka", email = "emin.calyaka@isskar.fr"}
]
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.2.0",
    "langchain>=0.2.0",
    "streamlit>=1.31.0",
    "langchain-core>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "faiss-cpu>=1.7.4",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub[hf-xet]>=0.19.0",
    "sentence-transformers>=2.2.2",
    "openai>=1.0.0",
    "atlassian-python-api>=3.41.0",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "torch>=2.0.0,<=2.7.0",
    "transformers>=4.30.0",
    "tqdm>=4.65.0",
    "watchdog>=3.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.16",
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
    "pandas-stubs>=2.2.3.250308",
    "types-seaborn>=0.13.2.20250516",
    "ty>=0.0.1a6",
    "dotenv>=0.9.9",
    "azure-keyvault-secrets>=4.9.0",
    "azure-identity>=1.23.0",
    "azure-storage-blob>=12.19.0",
    "plotly>=6.1.2",
    "streamlit-feedback>=0.1.4",
    "psutil>=7.0.0",
    "einops>=0.8.1",
    "weaviate-client>=4.9.0",
    "llama-index-readers-confluence>=0.3.1",
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
    "llama-index-llms-openrouter>=0.1.0",
    "tiktoken>=0.8.0",
    "langdetect>=1.0.9",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "rag_evaluation*"]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0"
]

cli = [
    "click>=8.0.0"
]

evaluation = [
    "dvc[azure]>=3.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0,<=2.7.0",
    "tokenizers>=0.15.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.2.0",
    "sentencepiece[evaluation]>=0.2.0",
]

[project.scripts]
isschat-cli = "src.cli.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-unbound-attribute = "ignore"
possibly-unbound-import = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
